--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Text Formatting</title>
 </head>
 <body>
-Hello World
+<p>Hello World</p>Hello World
 
 Hello Moon
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
