--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>Hello World</p>
 
 <p>Hello Moon</p>
-  <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
+ <h2><!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
@@ -39,7 +39,7 @@
   ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
   voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
   eum fugiat quo voluptas nulla pariatur?
-
+</h2> 
 
 </body>
 </html>
