--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <p><h5>Hello World</h5></p>
 
-<p>Hello Moon</p>
+<p><em>Hello Moon</em></p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
