Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <p><h5>Hello World</h5></p>
 
 <p><em>Hello Moon</em></p>
+
+<p><strong>Hello Moon</strong></p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
