--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <p><h1>Hello World</h1></p>
 
-<p><em>Hello Moon</em></p>
+<p><h2>Hello Moon</h2></p>
 
 <p><strong>Hello Moon</strong></p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
