--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <p><h2>Hello Moon</h2></p>
 
-<p><strong>Hello Moon</strong></p>
+<p><h3>Hello Moon</h3></p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
