--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <p><h2>Hello Moon</h2></p>
 
 <p><h3>Hello Moon</h3></p>
+
+<p><h4>Hello Moon</h4></p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
